[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probe-inspect"
version = "1.1.0"
description = "A one-call inspection print for ML research — tensor shapes, stats, NaN detection, Jupyter cell-local lines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["research", "tensor", "inspect", "pytorch", "numpy", "jax", "jupyter", "ml", "deep-learning"]
authors = [
    { name = "arvnoodle", email = "arvinmapua2012@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/arvnoodle/probe-dev"
Repository = "https://github.com/arvnoodle/probe-dev"
Issues = "https://github.com/arvnoodle/probe-dev/issues"

[tool.hatch.build.targets.wheel]
packages = ["probe_inspect"]
